--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
-    <link rel="icon" type="image/png" href="./icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="assets/style.css">
 </head>
@@ -20,7 +19,7 @@
         </div>
         <h2 id="title">Dom dom kurşunu</h2>
         <h3 id="artist">İbolipa</h3>
-        <audio src=""></audio>
+        <audio src="assets/musics/dord2sifir.mp3"></audio>
         <!-- Progress -->
         <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
